fix(slickgrid): Fixed invisible scrollbar on top left viewport when not needed [SO-2373285]

--- a/slick.grid.css
+++ b/slick.grid.css
@@ -216,7 +216,7 @@ classes should alter those!
   width: 100%;
 }
 
-div.slick-viewport.slick-viewport-top.slick-viewport-left::-webkit-scrollbar:vertical {
+.no-vertical-scrollbar::-webkit-scrollbar:vertical {
   width: 0;
   background: transparent;
 }
